[gd_scene load_steps=9 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://dynamicfont-sourcecode.tres" type="DynamicFont" id=2]
[ext_resource path="res://theme/non_selected_button_theme.tres" type="StyleBox" id=3]
[ext_resource path="res://theme/selected_button_theme.tres" type="StyleBox" id=4]
[ext_resource path="res://theme/buttonfont-sourcecode-20-black.tres" type="DynamicFont" id=5]
[ext_resource path="res://font-sourcecode-16.tres" type="DynamicFont" id=6]
[ext_resource path="res://tileset.tres" type="TileSet" id=7]
[ext_resource path="res://assets/mower-001.png" type="Texture" id=8]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.133333, 0.0431373, 1 )

[node name="Title" type="Label" parent="."]
margin_left = 150.0
margin_top = 60.0
margin_right = 450.0
margin_bottom = 101.0
custom_fonts/font = ExtResource( 2 )
text = "Hauling Grass"
align = 1

[node name="TopMenu" type="Node2D" parent="."]

[node name="ArcadeMode" type="Label" parent="TopMenu"]
margin_left = 100.0
margin_top = 150.0
margin_right = 249.0
margin_bottom = 195.0
custom_fonts/font = ExtResource( 6 )
text = "Arcade Mode
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="TopMenu"]
margin_left = 100.0
margin_top = 225.0
margin_right = 249.0
margin_bottom = 246.0
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderboardButton" type="Button" parent="TopMenu"]
margin_left = 100.0
margin_top = 300.0
margin_right = 249.0
margin_bottom = 321.0
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "Leaderboard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CampaignMode" type="Label" parent="TopMenu"]
margin_left = 350.0
margin_top = 150.0
margin_right = 499.0
margin_bottom = 195.0
custom_fonts/font = ExtResource( 6 )
text = "Campaign  Mode
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewCampaignButton" type="Button" parent="TopMenu"]
margin_left = 350.0
margin_top = 225.0
margin_right = 499.0
margin_bottom = 246.0
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "New Campaign"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadCampaignButton" type="Button" parent="TopMenu"]
margin_left = 350.0
margin_top = 300.0
margin_right = 499.0
margin_bottom = 321.0
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "Load Campaign"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="TopMenu"]
margin_left = 225.0
margin_top = 450.0
margin_right = 374.0
margin_bottom = 471.0
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiniLawn" type="Node2D" parent="."]

[node name="TileMap-Background" type="TileMap" parent="MiniLawn"]
tile_set = ExtResource( 7 )
format = 1
tile_data = PoolIntArray( 65545, 6, 0, 65546, 6, 0, 65547, 6, 0, 65548, 6, 0, 65549, 6, 0, 65550, 6, 0, 131081, 6, 0, 131082, 6, 0, 131083, 6, 0, 131084, 6, 0, 131085, 6, 0, 131086, 6, 0, 196617, 6, 0, 196618, 6, 0, 196619, 6, 0, 196620, 6, 0, 196621, 6, 0, 196622, 6, 0, 262153, 6, 0, 262154, 6, 0, 262155, 6, 0, 262156, 6, 0, 262157, 6, 0, 262158, 6, 0, 262168, 6, 0, 327689, 6, 0, 327690, 6, 0, 327691, 6, 0, 327692, 6, 0, 327693, 6, 0, 327694, 6, 0, 393225, 6, 0, 393226, 6, 0, 393227, 6, 0, 393228, 6, 0, 393229, 6, 0, 393230, 6, 0, 458761, 6, 0, 458762, 6, 0, 458763, 6, 0, 458764, 6, 0, 458765, 6, 0, 458766, 6, 0 )

[node name="TileMap-TopLayer" type="TileMap" parent="MiniLawn"]
tile_set = ExtResource( 7 )
format = 1
tile_data = PoolIntArray( 65545, 20, 0, 65546, 20, 0, 65547, 20, 0, 65548, 20, 0, 65549, 20, 0, 65550, 20, 0, 131081, 21, 0, 131085, 3, 0, 196618, 21, 0, 196622, 21, 0, 262153, 4, 0, 262154, 21, 0, 327689, 4, 0, 327691, 21, 0, 327692, 21, 0, 327694, 15, 0, 393225, 21, 0, 393226, 3, 0, 393228, 3, 0, 393229, 21, 0, 393230, 11, 0, 458761, 20, 0, 458762, 20, 0, 458763, 20, 0, 458764, 20, 0, 458765, 20, 0, 458766, 20, 0 )

[node name="mower-001" type="Sprite" parent="MiniLawn"]
position = Vector2( 767.855, 242.472 )
texture = ExtResource( 8 )
[connection signal="pressed" from="TopMenu/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="TopMenu/LeaderboardButton" to="." method="_on_LeaderboardButton_pressed"]
[connection signal="pressed" from="TopMenu/QuitButton" to="." method="_on_QuitButton_pressed"]
